@@ -511,6 +511,9 @@ Documentation
 Tests
 -----
 
+- Issue #28666: Now test.support.rmtree is able to remove unwritable or
+  unreadable directories.
+
 - Issue #23839: Various caches now are cleared before running every test file.
 
 - Issue #28409: regrtest: fix the parser of command line arguments.
